# cli

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
