[package]
name = "naan"
version = "0.2.0"
edition = "2021"
description = "A tiny grep-like CLI (learning project)"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.1"
regex = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
